# VisionEdge-RT

./: ARCHITECTURE.md  CAMERA_FIXED.md  COMPLETE_RUN_GUIDE.md  DEMO_GUIDE.md  FINAL_STATUS.md  FULLY_WORKING.md  GIT_COMMIT_PLAN.md  HOW_TO_RUN.md  LAUNCH_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RUNNING_NOW.md  SETUP_INSTRUCTIONS.md  START_HERE.md  START_NOW.md  SUCCESS.md  TESTING_CHECKLIST.md  UI_UPGRADE_COMPLETE.md  WHAT_CAN_RUN.md  build.gradle  gradlew.bat  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/edgeviewer/: CameraManager.kt  MainActivity.kt  NativeBridge.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
gl/: GLRenderer.kt  README.md
jni/: README.md
web/: package.json  tsconfig.json
web/public/: app.html  enhanced-effects.js  index.html  particles.js
web/src/: app.ts  camera-simulator.ts  edge-detector.ts  main.ts  server.ts
